# CheXficient

./: .gitignore  pyproject.toml
src/chexficient/: __init__.py  main.py  models_clip.py
src/chexficient/clipeval/: CheXpert.py  MIMIC_CXR.py  NIHChestXray14.py  Pneumonia_ChestXray2017.py  ReXGraident.py  SIIM_Pneumothorax.py  TBX11K.py  VinDr_CXR.py  VinDr_PCXR.py  dataset_catalog.json  dataset_catalog_full.json  datasets.py  eval_zeroshot.py  labels.json
src/chexficient/preprocess/: fun_utils.py  report_check_ChestDR_Synthetic.py  report_check_ChexPertPlus.py  report_check_NIHChestXray14_Synthetic.py  report_check_ReXGradient.py  report_check_bimcv.py  report_check_brax_Synthetic.py  report_check_candid.py  report_check_mimic_cxr.py  report_check_open_i.py  report_check_padchest.py  report_check_vindr-cxr_Synthetic.py  report_check_vindr-pcxr_Synthetic.py  report_templates.json
src/chexficient/prompt/: constants.py  imagetext_eval.py
src/chexficient/util/: funs.py  helpers.py  losses.py  lr_scheduler.py  misc.py  projection.py  sweeps.py
