[project]
name = "chexficient"
version = "0.1.0"
description = "CheXficient is a chest X-ray (CXR) foundation model developed within a contrastive language–image pretraining (CLIP) framework. Instead of relying on aggressive scaling, it emphasizes more effective utilization of training data to enhance both data efficiency and computational efficiency. Through active data-curated pretraining, CheXficient achieves competitive performance while requiring substantially fewer data and compute resources, offering a practical approach for scalable medical imaging foundation models."
authors = [
    { name = "nicolegu", email = "nguob@uw.edu" },
    { name = "cwangrun", email = "chongwangsmu@gmail" },
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "charset-normalizer",
    "click",
    "contourpy",
    "cycler",
    "docker-pycreds",
    "einops",
    "emoji",
    "faiss-gpu-cu12",
    "fonttools",
    "fsspec",
    "ftfy",
    "gitdb",
    "gitpython==3.1.44",
    "h5py==3.14.0",
    "hf-xet==1.1.5",
    "huggingface-hub==0.33.0",
    "idna==3.4",
    "iopath==0.1.10",
    "jinja2==3.1.4",
    "joblib==1.5.1",
    "kiwisolver==1.4.8",
    "lightning-utilities==0.14.3",
    "markdown-it-py==4.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.10.3",
    "networkx==3.3",
    "nltk==3.9.1",
    "numpy>=1.26.3,<1.27",
    "open-clip-torch==3.1.0",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pandas==2.2.3",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pydicom==3.0.1",
    "pyyaml==6.0.2",
    "rad-dino==0.1.1",
    "regex",
    "requests",
    "rich",
    "safetensors",
    "scikit-learn",
    "scipy==1.15.3",
    "sentencepiece",
    "threadpoolctl",
    "timm",
    "tokenizers",
    "torchmetrics==1.7.3",
    "torchvision",
    "tqdm",
    "transformers>=4.40.0,<=5.4.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.scripts]
chexficient = "chexficient:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"
