[project]
name = "chexficient"
version = "0.1.0"
description = "CheXficient is a chest X-ray (CXR) foundation model developed within a contrastive language-image pretraining (CLIP) framework. Instead of relying on aggressive scaling, it emphasizes more effective utilization of training data to enhance both data efficiency and computational efficiency. Through active data-curated pretraining, CheXficient achieves competitive performance while requiring substantially fewer data and compute resources, offering a practical approach for scalable medical imaging foundation models."
authors = [
    { name = "nicolegu", email = "nguob@uw.edu" },
    { name = "cwangrun", email = "chongwangsmu@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "charset-normalizer",
    "click",
    "contourpy",
    "cycler",
    "docker-pycreds",
    "einops",
    "emoji",
    "faiss-gpu-cu12",
    "fonttools",
    "fsspec",
    "ftfy",
    "gitdb",
    "gitpython",
    "h5py",
    "hf-xet",
    "huggingface-hub",
    "idna",
    "iopath==0.1.10",
    "jinja2==3.1.4",
    "joblib==1.5.1",
    "kiwisolver==1.4.8",
    "lightning-utilities",
    "markdown-it-py",
    "markupsafe",
    "matplotlib",
    "networkx==3.3",
    "nltk",
    "numpy>=1.26.3,<1.27",
    "open-clip-torch",
    "opencv-python",
    "packaging",
    "pandas",
    "pydantic",
    "pydantic-core",
    "pydicom",
    "pyyaml",
    "rad-dino==0.1.1",
    "regex",
    "requests",
    "rich",
    "safetensors",
    "scikit-learn",
    "scipy",
    "sentencepiece",
    "threadpoolctl",
    "timm",
    "tokenizers",
    "torchmetrics==1.7.3",
    "torchvision",
    "tqdm",
    "transformers<=5.4.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.scripts]
chexficient = "chexficient:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/chexficient",
    "src/chexficient/dinov2",
    "src/chexficient/clipeval",
    "src/chexficient/prompt",
]

[tool.hatch.build.targets.wheel.force-include]
"src/chexficient/models_clip.py" = "models_clip.py"
